test/features/errors/runtime/e3005_timeout.spl
# E3005: Timeout

Feature: E3005 - Operation Timed Out
  As a Simple runtime
  I want to detect timeouts
  So that long-running operations are bounded

  Background:
    Given I have the Simple runtime

  Scenario: Operation timeout
    When I run with timeout 1s:
      '''
      fn test():
        loop:
          # Infinite loop causes timeout
          val x = 1
      '''
    Then I should see runtime error E3005
    And the error message should be "operation timed out after {duration}"
    And the label should indicate "timeout"
    And the help should suggest "increase the timeout duration or optimize the operation"

  Scenario: Operation completes in time
    When I run with timeout 5s:
      '''
      fn test():
        for i in 0..10:
          print(i)
      '''
    Then execution should succeed

  Scenario: Korean language error
    Given I set runtime language to "ko"
    When I run with timeout 1s:
      '''
      fn test():
        loop:
          val x = 1
      '''
    Then I should see runtime error E3005
    And the error message should contain "시간 초과"
